--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body{
     background-color: #f8f0ec;
     overflow-x:hidden;
     width: 100vw;
+ 
 }
 header{
     overflow-x: hidden;
@@ -632,6 +633,12 @@ footer i:hover{
     
 }
 @media (max-width:425px){
+    header{
+        height:100%;
+    }
+    .bannerframe{
+        position: relative;
+    }
     .text-side {
         margin: 7rem 0 -3rem 0;
     }
